--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -10,7 +10,7 @@
       <th>Special price</th>
       <th>Active</th>
       <th>Other</th>
-      <th>Type</th>
+      <th>Kind</th>
       <th>Url1</th>
       <th>Url2</th>
       <th>Url3</th>
@@ -27,7 +27,7 @@
         <td><%= field.special_price %></td>
         <td><%= field.active %></td>
         <td><%= field.other %></td>
-        <td><%= field.type %></td>
+        <td><%= field.kind %></td>
         <td><%= field.url1 %></td>
         <td><%= field.url2 %></td>
         <td><%= field.url3 %></td>
