Problemas solucionados, lista de pistas por ciudad

--- a/app/views/entities/listf.html.erb
+++ b/app/views/entities/listf.html.erb
@@ -1,8 +1,8 @@
 <h1>Pistas disponibles</h1>
-<% @list.each do |field| %>
+<% @list_fields.each do |field| %>
 <p>
-<h2>field.name</h2>
-  <h3>Precio nomal: field.normal_price</h3>
-  <h3>Precio especial: field.special_price</h3>
+<h2><%= field.name %></h2>
+  <h3> normal price: <%= field.normal_price %></h3>
+  <h3> special price: <%=field.special_price %></h3>
 </p>
 <% end %>
