--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,5 +1,20 @@
 <p id="notice"><%= notice %></p>
 
+<input type="text" class="form-control" id="datefield">
+
+
+
+ <%= @field.schedule.day_id %>
+ <% @timetable.each do |k,v| %>
+
+
+
+
+
+<% end %>
+
+
+
 <p>
   <strong>Name:</strong>
   <%= @field.name %>
