--- a/app/assets/stylesheets/fields.scss
+++ b/app/assets/stylesheets/fields.scss
@@ -1,3 +1,5 @@
 // Place all the styles related to the Fields controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table{background:#CCC;border:1px solid #000;}
+table td{padding:15px;border:1px solid #DDD;}
