--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -6,15 +6,9 @@
 <p><input type="text" class="datepicker" onkeydown="return false" onCopy="return false" onDrag="return false" onDrop="return false" onPaste="return false" autocomplete=off></p>
 
 <div id="dynamictable"></div>
- <%= @field.schedule.day_id %>
- <% @timetable.each do |k,v| %>
+<%= @field.schedule.day_id %>
 
-
-
-
-
-<% end %>
-
+<%= @hours.inspect %>
 
 
 <p>
