Inicio ajax y subcadena fecha

--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :monthday %>
+    <%= f.number_field :monthday %>
+  </div>
+
+  <div class="field">
     <%= f.label :h0 %>
     <%= f.number_field :h0 %>
   </div>
