--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Monthday:</strong>
+  <%= @schedule.monthday %>
+</p>
+
+<p>
   <strong>H0:</strong>
   <%= @schedule.h0 %>
 </p>
