--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,16 +1,15 @@
 <p id="notice"><%= notice %></p>
-
-
-
-
 <p><input type="text" class="datepicker" onkeydown="return false" onCopy="return false" onDrag="return false" onDrop="return false" onPaste="return false" autocomplete=off></p>
-
-
 
 <%= @timetable.inspect %>
 
 <div id="dynamictable">
   <input type="button" onclick="createTable();" value="Create Table" />
+</div>
+
+<div>
+ <input type="hidden" id='field_id' value='<%= @field.id %>'>
+ <p id='date'> </p>
 </div>
 <p>
   <strong>Name:</strong>
