Erasing Old tables and avoid repetition

--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -4,7 +4,7 @@
 <%= @timetable.inspect %>
 
 <div id="dynamictable">
-  <input type="button" onclick="createTable();" value="Create Table" />
+  <input type="button" onclick="borrar();" value="Borrar" />
 </div>
 
 <div>
