--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -3,9 +3,8 @@
 
 <%= @timetable.inspect %>
 
-<div id="dynamictable">
-
-</div>
+<div id="dynamictable"></div>
+<div id="booking"></div>
 
 <div>
  <input type="hidden" id='field_id' value='<%= @field.id %>'>
