--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Poligol</title>
-    <%= csrf_meta_tags %>
 
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://js.stripe.com/v3/",'application', 'data-turbolinks-track': 'reload' %>
     <%= tag :meta, name: "stripe_public_key", content: Rails.application.secrets.stripe_public_key %>
+
   </head>
 
   <body>
